Add some basic information about the game such as controls

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title>BorderRealm</title>
 </head>
 <body>
-    
+    <!--Heading-->
+    <h1>BorderRealm</h1>
+
+    <!--Controls for game (explained)-->
+    <div>
+        <ul>
+            <li>Up</li>
+            <li>Down</li>
+            <li>Left</li>
+            <li>Right</li>
+        </ul>
+    </div>
+    <!---->
+    <!---->
+    <!---->
 </body>
 </html>
