Add basic footer structure

--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
             <li>Right</li>
         </ul>
     </div>
-    <!---->
-    <!---->
-    <!---->
+
+    <!--Footer-->
+    <footer>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </footer>
+
+    <!--Scripts-->
+    
 </body>
 </html>
