--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     </footer>
 
     <!--Scripts-->
-    
+    <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
 </html>
