Add footer logos using font awesome

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!--Controls for game (explained)-->
     <div>
         <ul>
-            <li>Up</li>
+            <li>
+                <a href="#" aria-label="Up button is to jump"><i class="fa-solid fa-up"></i></a>
+            </li>
             <li>Down</li>
             <li>Left</li>
             <li>Right</li>
@@ -25,9 +27,15 @@
     <!--Footer-->
     <footer>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+                <a href="https://Facebook.com" target="_blank" rel="noopener" aria-label="Visit us on FaceBook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://Instagram.com" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
         </ul>
     </footer>
 
