Add start button

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     <!--Controls for game (explained)-->
     <div>
         <ul>
-            <li>
-                <a href="#" aria-label="Up button is to jump"><i class="fa-solid fa-up"></i></a>
-            </li>
+            <li>Up</li>
             <li>Down</li>
             <li>Left</li>
             <li>Right</li>
         </ul>
+    </div>
+
+    <!--Start button-->
+    <div id="start-button">
+        <button>Start Game</button>
     </div>
 
     <!--Footer-->
