Add game instructions and layout on index page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
         </ul>
     </div>
 
+    <!--Short explanation of the game-->
+    <div>
+        <p>
+            The game is a basic 2D scroller game.
+            <br>
+            There are enimies you will need to attack.
+            <br>
+            Difficulty can be set by using a scroller bar at the bottom of the page.
+            <br>
+            All stats will be shown at the top left of the screen.
+        </p>
+    </div>
+
     <!--Start button-->
     <div id="start-button">
         <button>Start Game</button>
