Link html and game page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <!--Heading-->
-    <h1>BorderRealm</h1>
+    <h1 id="header">BorderRealm</h1>
 
     <!--Controls for game (explained)-->
-    <div>
+    <div id="game-cont-exp">
         <ul>
             <li>Up</li>
             <li>Down</li>
@@ -23,7 +23,7 @@
     </div>
 
     <!--Short explanation of the game-->
-    <div>
+    <div id="game-instructions">
         <p>
             The game is a basic 2D scroller game.
             <br>
@@ -37,11 +37,11 @@
 
     <!--Start button-->
     <div id="start-button">
-        <button>Start Game</button>
+        <a href="game.html"><button>Start Game</button></a>
     </div>
 
     <!--Footer-->
-    <footer>
+    <footer id="social-media">
         <ul>
             <li>
                 <a href="https://Facebook.com" target="_blank" rel="noopener" aria-label="Visit us on FaceBook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
