--- a/index.html
+++ b/index.html
@@ -12,16 +12,6 @@
     <!--Heading-->
     <h1 id="header">BorderRealm</h1>
 
-    <!--Controls for game (explained)-->
-    <div id="game-cont-exp">
-        <ul>
-            <li>Up</li>
-            <li>Down</li>
-            <li>Left</li>
-            <li>Right</li>
-        </ul>
-    </div>
-
     <!--Short explanation of the game-->
     <div id="game-instructions">
         <p>
@@ -35,6 +25,17 @@
         </p>
     </div>
 
+    <!--Controls for game (explained)-->
+    <div id="game-cont-exp">
+        <ul>
+            <li>Up</li>
+            <li>Down</li>
+            <li>Left</li>
+            <li>Right</li>
+        </ul>
+    </div>
+    
+
     <!--Start button-->
     <div id="start-button">
         <a href="game.html"><button>Start Game</button></a>
@@ -42,6 +43,7 @@
 
     <!--Footer-->
     <footer id="social-media">
+        <div id="icons">
         <ul>
             <li>
                 <a href="https://Facebook.com" target="_blank" rel="noopener" aria-label="Visit us on FaceBook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
@@ -53,6 +55,7 @@
                 <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
             </li>
         </ul>
+    </div>
     </footer>
 
     <!--Scripts-->
