Style footer icons

--- a/index.html
+++ b/index.html
@@ -43,18 +43,10 @@
 
     <!--Footer-->
     <footer id="social-media">
-        <div id="icons">
-        <ul>
-            <li>
-                <a href="https://Facebook.com" target="_blank" rel="noopener" aria-label="Visit us on FaceBook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="https://Instagram.com" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
-            </li>
-        </ul>
+        <div class="icons">
+                <a class="social" href="https://Facebook.com" target="_blank" rel="noopener" aria-label="Visit us on FaceBook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+                <a class="social" href="https://Instagram.com" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+                <a class="social" href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
     </div>
     </footer>
 
