--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
     <!--Footer-->
     <footer id="social-media">
         <div class="icons">
-                <a class="social" href="https://Facebook.com" target="_blank" rel="noopener" aria-label="Visit us on FaceBook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
-                <a class="social" href="https://Instagram.com" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
-                <a class="social" href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
-    </div>
+            <p>
+            Copyright Amor Jansen 2022
+            <a class="social" href="https://Facebook.com" target="_blank" rel="noopener" aria-label="Visit us on FaceBook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            <a class="social" href="https://Instagram.com" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+            <a class="social" href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </p>
+        </div>
     </footer>
 
     <!--Scripts-->
