--- a/game.html
+++ b/game.html
@@ -10,6 +10,13 @@
     <title>BorderRealm</title>
 </head>
 <body>
-    
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!---->
+    <!--JavaScript link-->
+    <script src="game.js"></script>
 </body>
 </html>
