--- a/game.html
+++ b/game.html
@@ -10,13 +10,13 @@
     <title>BorderRealm</title>
 </head>
 <body>
-    <!---->
+    <!--Canvas-->
     <!---->
     <!---->
     <!---->
     <!---->
     <!---->
     <!--JavaScript link-->
-    <script src="game.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 </html>
