Add canvas for game

--- a/game.html
+++ b/game.html
@@ -10,7 +10,8 @@
     <title>BorderRealm</title>
 </head>
 <body>
-    <!--Canvas-->
+    <!--Canvas for game-->
+    <canvas id="game-canvas"></canvas>
     <!---->
     <!---->
     <!---->
