--- a/game.html
+++ b/game.html
@@ -18,6 +18,6 @@
     <!---->
     <!---->
     <!--JavaScript link-->
-    <script src="assets/javascript/game.js"></script>
+    <script type="module" src="assets/javascript/game.js"></script>
 </body>
 </html>
