Add comments in Html game document for all images

--- a/game.html
+++ b/game.html
@@ -12,11 +12,13 @@
 <body>
     <!--Canvas for game-->
     <canvas id="game-canvas"></canvas>
-    <!---->
-    <!---->
-    <!---->
-    <!---->
-    <!---->
+
+    <!--Images for character-->
+
+    <!--Images for props-->
+
+    <!--Images for Environment-->
+
     <!--JavaScript link-->
     <script src="assets/javascript/game.js" type="module"></script>
 </body>
