--- a/game.html
+++ b/game.html
@@ -18,7 +18,15 @@
     <!--Images for props-->
 
     <!--Images for Environment-->
-
+    <img src="assets/images/Layer1.png" alt="">
+    <img src="assets/images/Layer2.png" alt="">
+    <img src="assets/images/Layer3.png" alt="">
+    <img src="assets/images/Layer4.png" alt="">
+    <img src="assets/images/Layer5.png" alt="">
+    <img src="assets/images/Layer6.png" alt="">
+    <img src="assets/images/Layer7.png" alt="">
+    <img src="assets/images/Layer8.png" alt="">
+    <img src="assets/images/Layer9.png" alt="">
     <!--JavaScript link-->
     <script src="assets/javascript/game.js" type="module"></script>
 </body>
