--- a/game.html
+++ b/game.html
@@ -18,15 +18,15 @@
     <!--Images for props-->
 
     <!--Images for Environment-->
-    <img src="assets/images/Layer1.png" alt="">
-    <img src="assets/images/Layer2.png" alt="">
-    <img src="assets/images/Layer3.png" alt="">
-    <img src="assets/images/Layer4.png" alt="">
-    <img src="assets/images/Layer5.png" alt="">
-    <img src="assets/images/Layer6.png" alt="">
-    <img src="assets/images/Layer7.png" alt="">
-    <img src="assets/images/Layer8.png" alt="">
-    <img src="assets/images/Layer9.png" alt="">
+    <img id="layer1" src="assets/images/Layer1.png" alt="parallax background image 1">
+    <img id="layer2" src="assets/images/Layer2.png" alt="parallax background image 2">
+    <img id="layer3" src="assets/images/Layer3.png" alt="parallax background image 3">
+    <img id="layer4" src="assets/images/Layer4.png" alt="parallax background image 4">
+    <img id="layer5" src="assets/images/Layer5.png" alt="parallax background image 5">
+    <img id="layer6" src="assets/images/Layer6.png" alt="parallax background image 6">
+    <img id="layer7" src="assets/images/Layer7.png" alt="parallax background image 7">
+    <img id="layer8" src="assets/images/Layer8.png" alt="parallax background image 8">
+    <img id="layer9" src="assets/images/Layer9.png" alt="parallax background image 9">
     <!--JavaScript link-->
     <script src="assets/javascript/game.js" type="module"></script>
 </body>
