Update name from enemy to foe

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <ul>
             <li>Up</li>
             <li>Down</li>
-            <li>Left</li>
-            <li>Right</li>
+            <li>Space</li>
         </ul>
     </div>
     
