Update player image and animate it

--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
     <canvas id="game-canvas"></canvas>
 
     <!--Images for character-->
-    <img id="player" src="assets/images/player-1.png" alt="player character">
+    <img id="player" src="assets/images/player.png" alt="player character">
     <!--Images for props-->
 
     <!--Images for Environment-->
