--- a/game.html
+++ b/game.html
@@ -15,6 +15,8 @@
 
     <!--Images for character-->
     <img id="player" src="assets/images/player-1.png" alt="player character">
+    <img id="blue-bat" src="assets/images/spritesheet-bat.png" alt="Blue bat character">
+    <img id="" src="assets/images/" alt="">
     <!--Images for props-->
 
     <!--Images for Environment-->
