Update comments on code

--- a/game.html
+++ b/game.html
@@ -30,6 +30,6 @@
     <img id="layer8" src="assets/images/Layer8.png" alt="parallax background image 8">
     <img id="layer9" src="assets/images/Layer9.png" alt="parallax background image 9">
     <!--JavaScript link-->
-    <script src="assets/javascript/game.js" type="module"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 </html>
