Add green alien foe

--- a/game.html
+++ b/game.html
@@ -16,7 +16,8 @@
     <!--Images for character-->
     <img id="player" src="assets/images/player-1.png" alt="player character">
     <img id="blue-bat" src="assets/images/spritesheet-bat.png" alt="Blue bat character">
-    <img id="" src="assets/images/" alt="">
+    <img id="egg" src="assets/images/egg.png" alt="Breaking egg">
+    <img id="green-alien" src="assets/images/green-alien.png" alt="Green alien">
     <!--Images for props-->
 
     <!--Images for Environment-->
