Add fireball image to game

--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
     <img id="egg" src="assets/images/egg.png" alt="Breaking egg">
     <img id="green-alien" src="assets/images/green-alien.png" alt="Green alien">
     <!--Images for props-->
+    <img id="fire-ball" src="assets/images/projectile.png" alt="fireball">
 
     <!--Images for Environment-->
     <img id="layer1" src="assets/images/Layer1.png" alt="parallax background image 1">
