Update first explosion method and import image

--- a/game.html
+++ b/game.html
@@ -20,7 +20,8 @@
     <img id="green-alien" src="assets/images/green-alien.png" alt="Green alien">
     <!--Images for props-->
     <img id="fire-ball" src="assets/images/projectile.png" alt="fireball">
-
+    <img id="smoke" src="assets/images/smokeExplosion.png" alt="Puff of smoke">
+    <img id="fire" src="assets/images/fireExplosion.png" alt="puff of fire">
     <!--Images for Environment-->
     <img id="layer1" src="assets/images/Layer1.png" alt="parallax background image 1">
     <img id="layer2" src="assets/images/Layer2.png" alt="parallax background image 2">
