Update controls on index html

--- a/index.html
+++ b/index.html
@@ -28,11 +28,24 @@
 
     <!--Controls for game (explained)-->
     <div id="game-cont-exp">
-        <ul>
-            <li>Up</li>
-            <li>Down</li>
-            <li>Space</li>
-        </ul>
+        <p>
+            <h3>Controls</h3>
+            <br>
+            The up arrow will move your character up.
+            <br>
+            The down arrow will move your character down.
+            <br>
+            The space bar will shoot the fireball/laser.
+        </p>
+        <p>
+            <h3>Mobile controls</h3>
+            <br>
+            Swipe up to go up.
+            <br>
+            Swipe down to go down.
+            <br>
+            Tap to shoot fireball/laser.
+        </p>
     </div>
     
 
