Add a back button to game screen

--- a/game.html
+++ b/game.html
@@ -10,6 +10,9 @@
     <title>BorderRealm</title>
 </head>
 <body>
+    <div>
+        <a id="back-btn" href="index.html">Back</a>
+    </div>
     <!--Canvas for game-->
     <canvas id="game-canvas"></canvas>
 
