Update readme add responsive image

--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
 <body>
     <div>
         <a id="back-btn" href="index.html">Back</a>
+        <button id="restart" type="button">Restart</button>
     </div>
     <!--Canvas for game-->
     <canvas id="game-canvas"></canvas>
@@ -19,12 +20,11 @@
     <!--Images for character-->
     <img id="player" src="assets/images/player-1.png" alt="player character">
     <img id="blue-bat" src="assets/images/spritesheet-bat.png" alt="Blue bat character">
-    <img id="egg" src="assets/images/egg.png" alt="Breaking egg">
     <img id="green-alien" src="assets/images/green-alien.png" alt="Green alien">
+
     <!--Images for props-->
     <img id="fire-ball" src="assets/images/projectile.png" alt="fireball">
-    <img id="smoke" src="assets/images/smokeExplosion.png" alt="Puff of smoke">
-    <img id="fire" src="assets/images/fireExplosion.png" alt="puff of fire">
+
     <!--Images for Environment-->
     <img id="layer1" src="assets/images/Layer1.png" alt="parallax background image 1">
     <img id="layer2" src="assets/images/Layer2.png" alt="parallax background image 2">
@@ -35,6 +35,7 @@
     <img id="layer7" src="assets/images/Layer7.png" alt="parallax background image 7">
     <img id="layer8" src="assets/images/Layer8.png" alt="parallax background image 8">
     <img id="layer9" src="assets/images/Layer9.png" alt="parallax background image 9">
+
     <!--JavaScript link-->
     <script src="assets/javascript/game.js"></script>
 </body>
