Add shoot button for mobile users

--- a/game.html
+++ b/game.html
@@ -10,10 +10,14 @@
     <title>BorderRealm</title>
 </head>
 <body>
+    <!--Buttons-->
     <div>
         <a id="back-btn" href="index.html">Back</a>
         <button id="restart" type="button">Restart</button>
     </div>
+    
+        <button id="shoot" type="button">Shoot</button>
+    
     <!--Canvas for game-->
     <canvas id="game-canvas"></canvas>
 
