--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <footer id="social-media">
         <div class="icons">
             <p>
-            Copyright Amor Jansen 2022
+             A. Jansen 2022
             <a class="social" href="https://Facebook.com" target="_blank" rel="noopener" aria-label="Visit us on FaceBook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             <a class="social" href="https://Instagram.com" target="_blank" rel="noopener" aria-label="Visit us on Instagram (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
             <a class="social" href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit us on Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
